[package]
description = "RFID reader utilities to encode and decode H10301 26bit Wiegand format"
documentation = "https://docs.rs/rfid-reader"
edition = "2021"
homepage = "https://github.com/kylestev/rfid-reader"
license-file = "LICENSE"
name = "rfid-debug"
readme = "README.md"
repository = "https://github.com/kylestev/rfid-reader"
version = "0.0.4"

[dependencies]
bit_field = "0.10.1"
